add alttag and chng n css

--- a/templates/base.html
+++ b/templates/base.html
@@ -107,7 +107,7 @@
                    <div class="container">
                        <nav class="navbar navbar-expand-lg navbar-light">
                            <a class="navbar-brand" href="{% url 'home' %}"><img
-                                   src="{% static 'image/header-logo.png' %}" alt="logo1"></a>
+                                   src="{% static 'image/header-logo.png' %}" alt="WNDR.com"></a>
                            <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
                                data-bs-target="#bdNavbar" aria-controls="bdNavbar" aria-expanded="false"
                                aria-label="Toggle navigation">
@@ -176,7 +176,7 @@
                            <div class="row footer-align">
                                <div class="col-md-3 col-lg-4 mbl-footer-img">
                                    <div class="footer-logo">
-                                       <img src="{% static 'image/header-logo.png' %}" alt="footerLogo">
+                                       <img src="{% static 'image/header-logo.png' %}" alt="WNDR.com">
                                    </div>
                                </div>
                                <div class="col-md-5 col-lg-5 copyright-footer">
@@ -188,27 +188,25 @@
                                <div class="col-md-4 col-lg-3 mbl-footer-social">
                                    <div class="right-sec-footer-social">
                                        <ul>
-                                           <li class="uk-scrollspy-inview"
-                                               uk-scrollspy="cls: uk-animation-slide-top; delay: 200; repeat: true">
-                                               <a href="#">
-                                                   <i class="fa fa-facebook" aria-hidden="true"></i></a>
-                                           </li>
+                                          
                                            <li class="uk-scrollspy-inview"
                                                uk-scrollspy="cls: uk-animation-slide-top; delay: 300; repeat: true">
-                                               <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                                               <a href="https://twitter.com/WNDRVERSE"><i class="fa fa-twitter" aria-hidden="true"></i></a>
                                            </li>
                                            <li class="uk-scrollspy-inview"
                                                uk-scrollspy="cls: uk-animation-slide-top; delay: 400; repeat: true">
-                                               <a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
+                                               <a href="https://gmail.com/"><i class="fa fa-envelope" aria-hidden="true"></i></a>
                                            </li>
                                            <li class="uk-scrollspy-inview"
-                                               uk-scrollspy="cls: uk-animation-slide-top; delay: 500; repeat: true">
-                                               <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-                                           </li>
-                                           <li class="uk-scrollspy-inview"
-                                               uk-scrollspy="cls: uk-animation-slide-top; delay: 600; repeat: true">
-                                               <a href="#"><i class="fa fa-pinterest-p" aria-hidden="true"></i></a>
-                                           </li>
+                                           uk-scrollspy="cls: uk-animation-slide-top; delay: 600; repeat: true">
+                                           <a href="https://www.youtube.com/channel/UCyccm9qtkFnj0-yGnE5fI5A"><i class="fa fa-youtube" aria-hidden="true"></i></a>
+                                       </li>
+                                       <li class="uk-scrollspy-inview"
+                                           uk-scrollspy="cls: uk-animation-slide-top; delay: 600; repeat: true">
+                                           <a href="https://www.tiktok.com/@wndrverse?_t=8WJxBZA7IJ4&_r=1"><i class="fa fa-tiktok" aria-hidden="true"></i></a>
+                                       </li>
+                                   
+                                   
                                        </ul>
                                    </div>
                                </div>
