--- a/templates/home.html
+++ b/templates/home.html
@@ -43,7 +43,7 @@
 		<div class="row">
 			<div class="col-md-12">
 				<div class="banner-logo-div animated uk-scrollspy-inview" uk-scrollspy="cls: uk-animation-slide-left; delay: 500; repeat: true">
-					<img src="{% static 'image/banner-logo.png' %}" class="banner-logo-remv" alt="wndrland_bannerLogo">
+					<img src="{% static 'image/banner-logo.png' %}" class="banner-logo-remv" alt="WNDR LOGO">
 				</div>
 				<div class="banner-WNDR-outer">
 					<div class="banner-WNDR-btn">
