--- a/templates/our-vision.html
+++ b/templates/our-vision.html
@@ -17,6 +17,9 @@
 	<!-- font awsome -->
 	<script src="https://use.fontawesome.com/b197abb434.js"></script>
 	<script src="https://kit.fontawesome.com/1086841b1d.js" crossorigin="anonymous"></script>
+	
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+ 
 </head>
 <div class="mobilelandscapeview" style="position:relative;">
 	<div class="landscape_view1">
@@ -72,7 +75,7 @@
 				<div class="container">
 					<nav class="navbar navbar-expand-lg navbar-light">
 						<a class="navbar-brand" href="{% url 'home' %}"><img src="{% static 'image/header-logo.png' %}"
-								alt="header-logo"></a>
+								alt="WNDR.com"></a>
 						<button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
 							data-bs-target="#bdNavbar" aria-controls="bdNavbar" aria-expanded="false"
 							aria-label="Toggle navigation">
@@ -123,7 +126,7 @@
 			<div class="row">
 				<div class="col-md-12 our-vision-hdng">
 					<div class="banner-logo-vision animated">
-						<img src="{% static 'image/banner-logo.png' %}" class="banner-logo-remv" alt="banner-logo">
+						<img src="{% static 'image/banner-logo.png' %}" class="banner-logo-remv" alt="WNDR LOGO">
 					</div>
 					<h1 class="uk-scrollspy-inview hide_mbl_vision">Our Vision</h1>
 					<div class="banner-WNDR-btn mobile_section_vision">
@@ -159,7 +162,7 @@
 							ultimate question: Is this Metaverse thing real? </p>
 					</span>
 					<span class="uk-scrollspy-inview tp-txt">
-						<img src="{% static 'image/Slide6.JPG' %} "  alt="slide6">
+						<img src="{% static 'image/Slide6.JPG' %} "  alt="THE WNDRS">
 					<p> Debate about what, exactly, the Metaverse is or isn’t is outside the scope of this document.
 						However, at a high level, when most people think of the “Metaverse,” they are often thinking
 						about a digital alternative universe populated by human-like avatars. These avatars may be
@@ -204,7 +207,7 @@
 							engine powers the delivery to any Internet-connected device with a single click.
 						</p>
 					<span class="uk-scrollspy-inview tp-txt ">
-						<img src="{% static 'image/Slide3.JPG' %}" alt="Slide3">
+						<img src="{% static 'image/Slide3.JPG' %}" alt="Viral Mechnics">
 					 <p class="uk-scrollspy-inview">So, while WNDR will produce a library of games and experiences
 						in-house, the company’s approach is predicated on a model that has more in common with YouTube
 						than with a traditional game development studio. Not only will the WNDR studio create and
@@ -215,7 +218,7 @@
 						hardware and peripherals, WNDR’s model is a far more democratic one. Simply put, our market is
 						EVERYONE that has access to the Internet and short, engaging entertainment experiences.</p>
 					 <span class="uk-scrollspy-inview tp-txt ">
-						<img src="{% static 'image/Slide2.JPG' %}" alt="Slide2">
+						<img src="{% static 'image/Slide2.JPG' %}" alt="Gateway to the Metaverse -WNDRS">
 					<p class="uk-scrollspy-inview">Today, the accessibility and speed of the Internet is giving us
 						access to the world in seconds. Users are consuming more content and on-the-go. We scroll past
 						IG posts, skip on TIK TOK around new music releases and watch TV clips the same way. WNDR caters
@@ -259,7 +262,7 @@
 						transact, socialize, and grow.
 					</p>
 					<span class="uk-scrollspy-inview tp-txt">
-						<img src="{% static 'image/Slide9.JPG' %}"  oncontextmenu="return!1" alt="slide9">
+						<img src="{% static 'image/Slide9.JPG' %}"  oncontextmenu="return!1" alt="Market Projection">
 					</span>
 					<p class="uk-scrollspy-inview tp-txt">There can be little doubt that the opportunity is a
 						significant one: A study by JPMorgan Chase (JPM) found that metaverse "will likely infiltrate
@@ -375,7 +378,7 @@
 							are truly astounding at scale.
 						</p>
 						<span class="wll-srtr uk-scrollspy-inview ">
-							<img src="{% static 'image/Slide7.JPG' %}" alt="slide7">
+							<img src="{% static 'image/Slide7.JPG' %}" alt="Avtars fashion Real Estate -WNDRS">
 						</span>
 						<p>In many ways, Blockchain gaming has already taken the center stage of the gaming world.
 							However, most games featuring Blockchain technologies are very simplistic in appearance and
@@ -405,7 +408,7 @@
 							<p class="uk-scrollspy-inview">The top five NFT projects in terms of all-time sales
 								according to dappradar.com statistics</p>
 							<span class="wll-srtr uk-scrollspy-inview ">
-								<img src="{% static 'img/nft-prject.jpg' %}" alt="nft-prject">
+								<img src="{% static 'img/nft-prject.jpg' %}" alt="NFT -Market">
 							</span>
 						</div>
 					</div>
@@ -460,7 +463,7 @@
 					</p>
 					<span class="wll-srtr uk-scrollspy-inview "
 						uk-scrollspy="cls: uk-animation-slide-right; delay: 900; repeat: true" style="">
-						<img src="{% static 'image/sLIDE-16-LOFT-(1).jpg' %}" alt="sLIDE-16-LOFT-(1)">
+						<img src="{% static 'image/sLIDE-16-LOFT-(1).jpg' %}" alt="Hyper-Real Luxury Virtual Living">
 					</span>
 					<p class="uk-scrollspy-inview"
 						uk-scrollspy="cls: uk-animation-slide-left; delay: 500; repeat: true">Celebrities like Snoop
@@ -487,7 +490,7 @@
 					</p>
 					<span class="wll-srtr uk-scrollspy-inview "
 						uk-scrollspy="cls: uk-animation-slide-right; delay: 900; repeat: true">
-						<img src="{% static 'image/SLIDE-17-VIRUAL-CONCERT-B -(1).jpg' %}" alt="SLIDE-17-VIRUAL-CONCERT-B">
+						<img src="{% static 'image/SLIDE-17-VIRUAL-CONCERT-B -(1).jpg' %}" alt="Live Virtual Concerts">
 					</span>
 					<p class="uk-scrollspy-inview"
 						uk-scrollspy="cls: uk-animation-slide-left; delay: 500; repeat: true">
@@ -542,7 +545,7 @@
 						purchases.</p>
 					<span class="uk-scrollspy-inview kind_txt "
 						uk-scrollspy="cls: uk-animation-slide-right; delay: 700; repeat: true">
-						<img src="{% static 'image/Slide4.JPG' %}" alt="slide4">
+						<img src="{% static 'image/Slide4.JPG' %}" alt="WNDR.Coins">
 					<p class="blck-cntction uk-scrollspy-inview"
 						uk-scrollspy="cls: uk-animation-slide-right; delay: 400; repeat: true">CONCLUSION</p>
 					<p class="uk-scrollspy-inview"
@@ -553,7 +556,7 @@
 						connection and a device of any kind.</p>
 					<span class="uk-scrollspy-inview kind_txt "
 						uk-scrollspy="cls: uk-animation-slide-left; delay: 400; repeat: true">
-						<img src="{% static 'image/Slide5.JPG' %}" alt="slide5">		
+						<img src="{% static 'image/Slide5.JPG' %}" alt="Metagames - WNDRS">		
 					<p class="uk-scrollspy-inview"
 						uk-scrollspy="cls: uk-animation-slide-right; delay: 400; repeat: true"> As a seamless
 						distribution platform for high end content, WNDR will harness the power of 10 million plus
@@ -590,7 +593,7 @@
 					<div class="row footer-align">
 						<div class="col-md-3 col-lg-4 mbl-footer-img">
 							<div class="footer-logo">
-								<img src="{% static 'image/header-logo.png' %}" alt="header-logo">
+								<img src="{% static 'image/header-logo.png' %}" alt="WNDR.com">
 							</div>
 						</div>
 						<div class="col-md-5 col-lg-5 copyright-footer">
@@ -603,26 +606,21 @@
 							<div class="right-sec-footer-social">
 								<ul>
 									<li class="uk-scrollspy-inview"
-										uk-scrollspy="cls: uk-animation-slide-top; delay: 200; repeat: true">
-										<a href="#">
-											<i class="fa fa-facebook" aria-hidden="true"></i></a>
-									</li>
-									<li class="uk-scrollspy-inview"
-										uk-scrollspy="cls: uk-animation-slide-top; delay: 300; repeat: true">
-										<a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-									</li>
-									<li class="uk-scrollspy-inview"
-										uk-scrollspy="cls: uk-animation-slide-top; delay: 400; repeat: true">
-										<a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
-									</li>
-									<li class="uk-scrollspy-inview"
-										uk-scrollspy="cls: uk-animation-slide-top; delay: 500; repeat: true">
-										<a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-									</li>
-									<li class="uk-scrollspy-inview"
-										uk-scrollspy="cls: uk-animation-slide-top; delay: 600; repeat: true">
-										<a href="#"><i class="fa fa-pinterest-p" aria-hidden="true"></i></a>
-									</li>
+									uk-scrollspy="cls: uk-animation-slide-top; delay: 300; repeat: true">
+									<a href="https://twitter.com/WNDRVERSE"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+								</li>
+								<li class="uk-scrollspy-inview"
+									uk-scrollspy="cls: uk-animation-slide-top; delay: 400; repeat: true">
+									<a href="https://gmail.com/"><i class="fa fa-envelope" aria-hidden="true"></i></a>
+								</li>
+								<li class="uk-scrollspy-inview"
+								uk-scrollspy="cls: uk-animation-slide-top; delay: 600; repeat: true">
+								<a href="https://www.youtube.com/channel/UCyccm9qtkFnj0-yGnE5fI5A"><i class="fa fa-youtube" aria-hidden="true"></i></a>
+							</li>
+							<li class="uk-scrollspy-inview"
+							uk-scrollspy="cls: uk-animation-slide-top; delay: 600; repeat: true">
+							<a href="https://www.tiktok.com/@wndrverse?_t=8WJxBZA7IJ4&_r=1"><i class="fa fa-tiktok" aria-hidden="true"></i></a>
+						</li>
 								</ul>
 							</div>
 						</div>
