--- a/templates/contact.html
+++ b/templates/contact.html
@@ -17,6 +17,10 @@
 	<link rel="stylesheet" type="text/css" href="{% static 'css/custom.css' %}">
 	<!-- font awsome -->
 	<script src="https://use.fontawesome.com/b197abb434.js"></script>
+	<script src="https://kit.fontawesome.com/1086841b1d.js" crossorigin="anonymous"></script>
+	
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+ 
 	<!-- fav icon -->
 	<link rel="icon" type="image/x-icon" href="{% static 'image/fab-ic.png' %}">
 </head>
@@ -75,7 +79,7 @@
 				<div class="container">
 					<nav class="navbar navbar-expand-lg navbar-light">
 						<a class="navbar-brand" href="{% url 'home' %}"><img src="{% static 'image/header-logo.png' %}"
-								alt="header-logo"></a>
+								alt="WNDR.com"></a>
 						<button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
 							data-bs-target="#bdNavbar" aria-controls="bdNavbar" aria-expanded="false"
 							aria-label="Toggle navigation">
@@ -223,7 +227,7 @@
 					<div class="row footer-align">
 						<div class="col-md-3 col-lg-4 mbl-footer-img">
 							<div class="footer-logo">
-								<img src="{% static 'image/header-logo.png' %}" alt="header-logo">
+								<img src="{% static 'image/header-logo.png' %}" alt="WNDR.com">
 							</div>
 						</div>
 						<div class="col-md-5 col-lg-5 copyright-footer">
@@ -236,26 +240,21 @@
 							<div class="right-sec-footer-social">
 								<ul>
 									<li class="uk-scrollspy-inview"
-										uk-scrollspy="cls: uk-animation-slide-top; delay: 200; repeat: true">
-										<a href="#">
-											<i class="fa fa-facebook" aria-hidden="true"></i></a>
-									</li>
-									<li class="uk-scrollspy-inview"
-										uk-scrollspy="cls: uk-animation-slide-top; delay: 300; repeat: true">
-										<a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-									</li>
-									<li class="uk-scrollspy-inview"
-										uk-scrollspy="cls: uk-animation-slide-top; delay: 400; repeat: true">
-										<a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
-									</li>
-									<li class="uk-scrollspy-inview"
-										uk-scrollspy="cls: uk-animation-slide-top; delay: 500; repeat: true">
-										<a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-									</li>
-									<li class="uk-scrollspy-inview"
-										uk-scrollspy="cls: uk-animation-slide-top; delay: 600; repeat: true">
-										<a href="#"><i class="fa fa-pinterest-p" aria-hidden="true"></i></a>
-									</li>
+									uk-scrollspy="cls: uk-animation-slide-top; delay: 300; repeat: true">
+									<a href="https://twitter.com/WNDRVERSE"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+								</li>
+								<li class="uk-scrollspy-inview"
+									uk-scrollspy="cls: uk-animation-slide-top; delay: 400; repeat: true">
+									<a href="https://gmail.com/"><i class="fa fa-envelope" aria-hidden="true"></i></a>
+								</li>
+								<li class="uk-scrollspy-inview"
+								uk-scrollspy="cls: uk-animation-slide-top; delay: 600; repeat: true">
+								<a href="https://www.youtube.com/channel/UCyccm9qtkFnj0-yGnE5fI5A"><i class="fa fa-youtube" aria-hidden="true"></i></a>
+							</li>
+							<li class="uk-scrollspy-inview"
+								uk-scrollspy="cls: uk-animation-slide-top; delay: 600; repeat: true">
+								<a href="https://www.tiktok.com/@wndrverse?_t=8WJxBZA7IJ4&_r=1"><i class="fa fa-tiktok" aria-hidden="true"></i></a>
+							</li>
 								</ul>
 							</div>
 						</div>
