--- a/templates/our-vision.html
+++ b/templates/our-vision.html
@@ -5,6 +5,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="WNDR focuses on providing an advanced platform to modern-day gamers globally with a premium experience. For enthusiast games, it is a great digital platform to experience something great.">
 	<title>WNDR.com</title>
 	<!-- slick css -->
 	<!-- bootstrap-css start -->
@@ -293,7 +294,7 @@
 					<div class="row wall_streat_mess">
 						<div class="col-md-6 my-auto">
 							<span class="wll-srtr uk-scrollspy-inview ">
-								<img src="{% static 'image/Slide 14.jpg' %}" alt="slide14">
+								<img src="{% static 'image/Slide 14.jpg' %}" alt="Arcade Presents">
 							</span>
 						</div>
 						<div class="col-md-6">
