--- a/templates/roadmap.html
+++ b/templates/roadmap.html
@@ -5,6 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>WNDR.com</title>
+	<meta name="description" content="WNDR offers browser-based multiplayer meta-games, virtual events, and much more on any device that is connected through a simple website link.">
 	<!-- slick css -->
  <link rel="stylesheet" href="{% static 'css/slick.css' %}">
  <link rel="stylesheet" href="{% static 'css/slick-theme.css' %}">
