--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,6 +2,15 @@
 .video-content_mobile {
     display: none;
 }
+h2.uk-scrollspy-inview {
+    color: white;
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 60px;
+    font-weight: 400;
+    font-family: 'neuropolregular';
+    margin-bottom: 50px;
+}
 .sbscribe-section {
     margin-top: 20px;
 }
