update alt tags

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -214,14 +214,14 @@
 	<footer>
 		<div class="footer_WNDR footer-roadmap remove_saveimage">
 			<div class="footer-overlap">
-				<img src="{% static 'image/footer-line-top.png' %}" class="top-line" alt="footer-line-top">
-				<img src="{% static 'image/footer-line-top-mobile.png' %}" class="top-line-m0bile" alt="footer-line-top-mobile">
-				<img src="{% static 'image/footer-line-down.png' %}" class="bottom-line" alt="footer-line-down">
-				<img src="{% static 'image/footer-line-down-mobile.png' %}" class="bottom-line-mobile" alt="footer-line-down-mobile">
+				<img src="{% static 'image/footer-line-top.png' %}" class="top-line" alt="footer1">
+				<img src="{% static 'image/footer-line-top-mobile.png' %}" class="top-line-m0bile" alt="top-line-m0bile">
+				<img src="{% static 'image/footer-line-down.png' %}" class="bottom-line" alt="footer3">
+				<img src="{% static 'image/footer-line-down-mobile.png' %}" class="bottom-line-mobile" alt="footer4">
 			</div>
 			<div class="footer-shapes">
-				<img src="{% static 'image/footer-img.png' %}" class="footer-left-ic" alt="footer-img">
-				<img src="{% static 'image/footer-img2.png' %}" class="footer-right-ic" alt="footer-img2">
+				<img src="{% static 'image/footer-img.png' %}" class="footer-left-ic" alt="footerLeft_img">
+				<img src="{% static 'image/footer-img2.png' %}" class="footer-right-ic" alt="footerRight_img">
 			</div>
 			<div class="container">
 				<div class="footer-outer">
