--- a/templates/home.html
+++ b/templates/home.html
@@ -116,7 +116,7 @@
 			<h4>SELECT</h4>
 			<p>HYPER REAL AVATARS</p>
 			<img src="{% static 'image/About-line.png' %}" class="gallary-line" alt="line-gallary">
-			<img src="{% static 'image/gallary-line-mobile.png' %}" class="gallary-line-mobile">
+			<img src="{% static 'image/gallary-line-mobile.png' %}" class="gallary-line-mobile" alt="line-gallary-11">
 		</div>
 		<div class="slect-pvc-live pvc-btm-line uk-scrollspy-inview" uk-scrollspy="cls: uk-animation-slide-bottom; delay: 600; repeat: true">
 			<h4>LIVE</h4>
@@ -141,38 +141,38 @@
 				<img src="{% static 'image/SLIDER-PIC-1.jpg' %}" alt="slider1">
 			</div> 
 			<div class="gallery-slider-item">
-				<img src="{% static 'image/SLIDER-PIC-2.jpg' %}" alt="slider2">
+				<img src="{% static 'image/SLIDER-PIC-2.jpg' %}" alt="Metaverse nft - WNDR">
 			</div>
 			<div class="gallery-slider-item">
-				<img src="{% static 'image/SLIDER-PIC-3.jpg' %}" alt="slider3">
+				<img src="{% static 'image/SLIDER-PIC-3.jpg' %}" alt="Multiplayer Games">
 			</div>
 			<div class="gallery-slider-item">
-				<img src="{% static 'image/SLIDER-PIC-4.jpg' %}" alt="slider4">
+				<img src="{% static 'image/SLIDER-PIC-4.jpg' %}" alt="blockchain games">
 			</div> 
 		</div>
 		<div class="slct-pvc-crypto">
 			<div class="slect-ne uk-scrollspy-inview" uk-scrollspy="cls: uk-animation-slide-right; delay: 200; repeat: true">
-				<img src="{% static 'image/gallary-pic-pc.jpg' %}" alt="wndrland_gallaryImg1" class="gallary-img-readius">
+				<img src="{% static 'image/gallary-pic-pc.jpg' %}" alt="Online games" class="gallary-img-readius">
 			</div>
 			<div class="slect-tw uk-scrollspy-inview" uk-scrollspy="cls: uk-animation-slide-top; delay: 300; repeat: true">
-				<img src="{% static 'image/gallary-pic2222-pc.jpg' %}" alt="wndrland_gallaryImg2" class="gallary-img-readius1">
+				<img src="{% static 'image/gallary-pic2222-pc.jpg' %}" alt="Free online games" class="gallary-img-readius1">
 			</div>
 			<div class="slect-thr uk-scrollspy-inview" uk-scrollspy="cls: uk-animation-slide-left; delay: 200; repeat: true">
-				<img src="{% static 'image/gallary-pic2-pc.jpg' %}" alt="wndrland_gallaryImg3" class="gallary-img-readius2">
+				<img src="{% static 'image/gallary-pic2-pc.jpg' %}" alt="Web 3 Games" class="gallary-img-readius2">
 			</div>
 		</div>
 		<div class="slct-pvc-bottom">
 			<div class="wndr-glry-on uk-scrollspy-inview" uk-scrollspy="cls: uk-animation-slide-left; delay: 100; repeat: true">
-				<img src="{% static 'image/gallary-pic3-pc.jpg' %}" alt="wndrland_gallaryImg4" class="gallary-img-readius3">
+				<img src="{% static 'image/gallary-pic3-pc.jpg' %}" alt="Best Browser games" class="gallary-img-readius3">
 			</div>
 			<div class="wndr-glry-tw uk-scrollspy-inview" uk-scrollspy="cls: uk-animation-slide-top; delay: 400; repeat: true">
-				<img src="{% static 'image/gallary-pic4-pc.jpg' %}" alt="wndrland_gallaryImg5" class="gallary-img-readius4">
+				<img src="{% static 'image/gallary-pic4-pc.jpg' %}" alt="PC Games" class="gallary-img-readius4">
 			</div>
 			<div class="wndr-glry-thr uk-scrollspy-inview" uk-scrollspy="cls: uk-animation-slide-right; delay: 600; repeat: true">
-				<img src="{% static 'image/gallary-pic5-pc.jpg' %}" alt="wndrland_gallaryImg6" class="gallary-img-readius5">
+				<img src="{% static 'image/gallary-pic5-pc.jpg' %}" alt="crypto games" class="gallary-img-readius5">
 			</div>
 			<div class="wndr-glry-fr uk-scrollspy-inview" uk-scrollspy="cls: uk-animation-slide-left; delay: 500; repeat: true">
-				<img src="{% static 'image/gallery-pic-last.jpg' %}" alt="wndrland_gallaryImg7" class="gallary-img-readius-last">
+				<img src="{% static 'image/gallery-pic-last.jpg' %}" alt="Web 3" class="gallary-img-readius-last">
 			</div>
 		</div>
 	</section> 
@@ -258,7 +258,7 @@
 								</div> 
 								<div class="bnnr_img mbl_cover_bnr">
 									<div class="wndr_colosium_overlay"></div>
-									 <img src="{% static 'image/game-player_mbl.png' %}"  id="play_button"  style="object-fit:cover;"> 
+									 <img src="{% static 'image/game-player_mbl.png' %}" alt="Browser Games"  id="play_button"  style="object-fit:cover;"> 
 								</div>					
 							</div>
 						</div>
@@ -290,8 +290,8 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12 coin-img">
-						<img src="{% static 'image/coin-img.png' %}" alt="wndrland_coins" class="widr-cions-pc uk-scrollspy-inview"uk-scrollspy="cls: uk-animation-slide-top; delay: 200; repeat: true">
-						<img src="{% static 'image/wind-coin-main-pic-mobile.png' %}" alt="wndrland_coinsMobile" class="widr-cions-mobile">
+						<img src="{% static 'image/coin-img.png' %}" alt="Wndrland coins" class="widr-cions-pc uk-scrollspy-inview"uk-scrollspy="cls: uk-animation-slide-top; delay: 200; repeat: true">
+						<img src="{% static 'image/wind-coin-main-pic-mobile.png' %}" alt="Wndrland coins" class="widr-cions-mobile">
 						<div class="wndr-coin-contnt">
 							<h2 class="uk-scrollspy-inview" uk-scrollspy="cls: uk-animation-slide-top; delay: 200; repeat: true">WNDR COIN</h2>
 							<p class="uk-scrollspy-inview" uk-scrollspy="cls: uk-animation-slide-top; delay: 300; repeat: true">Earn Real money inside The Virtual world through play and build with WNDR Coins. Blockchain based Cryptocurrency will power WNDR.LAND’s Economy and allow user to Buy and sell NFT’s</p>
