--- a/templates/our-vision.html
+++ b/templates/our-vision.html
@@ -67,7 +67,7 @@
 		<header class="header-tag-WNDR">
 			<div class="header_WNDR">
 				<div class="header-line header-line-shadow1">
-					<img src="{% static 'image/header-line-top.png' %}" class="header-line-pc" alt="header-line-top">
+					<img src="{% static 'image/header-line-top.png' %}" class="header-line-pc" alt="header-line">
 					<img src="{% static 'image/header-line-top-tabs.png' %}" class="header-line-tabs"
 						alt="header-line-top-tab">
 					<img src="{% static 'image/header-line-top-mobile.png' %}" class="header-line-mobile"
