--- a/templates/roadmap.html
+++ b/templates/roadmap.html
@@ -297,7 +297,7 @@
 		<div class="row">
 			<div class="col-md-3 col-sm-3 col-xs-3 lft-roadmap-tab">
 					<div class="road-mp-tablet">
-						<img src="{% static 'img/roadmap-center-tab.png' %}" class="tabs-line-center" src="lines">
+						<img src="{% static 'img/roadmap-center-tab.png' %} alt="tabs-line-center" class="tabs-line-center" src="lines">
 						<img src="{% static 'image/roadmap-line-center-mobile.png' %}" class="mobile-line-center" src="lines">
 					</div>
 			</div>
