--- a/templates/base.html
+++ b/templates/base.html
@@ -766,13 +766,13 @@ return false;
     })
     })
   </script> 
- {% comment %} <script>
+ <script>
     $(document).ready(function(){
       $(document).mouseleave(function(){
           $("#exampleModal").modal("show");
       });
   });
-  </script> {% endcomment %}
+  </script>
  </div>
    </div>
 </body>
