--- a/templates/home.html
+++ b/templates/home.html
@@ -48,7 +48,7 @@
 				<div class="banner-WNDR-outer">
 					<div class="banner-WNDR-btn">
 						<span class="WNDR-btn-item WNDR_btn_home animated uk-scrollspy-inview" uk-scrollspy="cls: uk-animation-slide-left; delay: 300; repeat: true">
-						<input type="text" name="myInput2" value="" id="myInput2" placeholder="Enter email"></span><br>
+						<input type="text" name="myInput2" value="" id="myInput2" placeholder="Enter email" autocomlete="off"></span><br>
 						<div class="alert alert-danger sueccs-msg" id="sucess_div2" role="alert" hidden>
 							<span id="sucess2" ></span>
 						</div>
