--- a/templates/teams.html
+++ b/templates/teams.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="description" content="Our visionary team members are working diligently to give you an immense experience of playing fantastic games. With years of combined experience, our team is keeping on finding the new ways to make WNDR more wonderful.">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>WNDR.com</title>
+	<title>Team Bio  - WNDR.com</title>
 	<!-- slick css -->
  <link rel="stylesheet" href="{% static 'css/slick.css' %}">
  <link rel="stylesheet" href="{% static 'css/slick-theme.css' %}">
