--- a/templates/contact.html
+++ b/templates/contact.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Wndr.com</title>
+	<title>Best Browser Games | Contact Us  - WNDR.com</title>
 	<meta name="description" content="If you have any queries related to game play or login, then you can contact us. We are committed to providing you with the best services.">
 	<!-- slick css -->
 	<link rel="stylesheet" href="{% static 'css/slick.css' %}">
@@ -257,7 +257,7 @@
 							</div>
 						</div>
 					</div>
-				</div>
+				</div>``
 			</div>
 		</div>
 	</footer>
